# ARIMA-Tools

./: .gitignore  Doxyfile  Makefile  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac  libtool
doc/html/: annotated.html  arima__tools_8h_source.html  classARIMAForecaster-members.html  classARIMAForecaster.html  classSeries-members.html  classSeries.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  structARIMAModel-members.html  structARIMAModel.html  structDiffSeries-members.html  structDiffSeries.html  structPredictions-members.html  structPredictions.html
doc/html/search/: all_61.html  all_64.html  all_6d.html  all_70.html  all_73.html  all_75.html  all_76.html  all_77.html  classes_61.html  classes_64.html  classes_70.html  classes_73.html  functions_64.html  functions_66.html  functions_70.html  search.js  variables_61.html  variables_64.html  variables_65.html  variables_69.html  variables_73.html
src/: Makefile  Makefile.am  Makefile.in  arima_tools.C  arima_tools.h
src/.deps/: arima_tools.Plo
src/.libs/: libarimatools.lai  libarimatools.so.0  libarimatools.so.0.0.0
